Fri Nov 30 12:20:53 2012  Eric Hodel  <drbrain@segment7.net>

	* lib/rake/backtrace.rb:  Removed duplication in
	  Rake::Backtrace::SUPPRESSED_PATHS
	* test/rake/test_rake_backtrace.rb:  Skip tests when tmpdir is in the
	  suppressed pattern.

Fri Nov 30 11:07:45 2012  Shugo Maeda  <shugo@ruby-lang.org>

	* revert r37993 to avoid SEGV in tests.

Fri Nov 30 10:38:54 2012  Eric Hodel  <drbrain@segment7.net>

	* lib/rdoc/ri/driver.rb:  Relaxed matching for pages to be more
	  user-friendly.
	* test/rdoc/test_rdoc_ri_driver.rb:   Test for above.

Fri Nov 30 09:50:16 2012  Eric Hodel  <drbrain@segment7.net>

	* lib/rdoc/markdown.rb:  Fixed warnings with -w

Fri Nov 30 09:38:22 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (RB_GC_GUARD_PTR): add note.

	* vm_backtrace.c (backtrace_to_str_ary): use RB_GC_GUARD() instead of
	  RB_GC_GUARD_PTR() which has no effect.
	  (backtrace_to_location_ary): ditto.
	  (vm_backtrace_to_ary): ditto.

Fri Nov 30 09:22:52 2012  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/commands/contents_command.rb:  Sort output from command.
	  Replaces r38004, r38005
	* test/rubygems/test_gem_commands_contents_command.rb:  ditto.

	* lib/rubygems/defaults.rb:  Use Gem.path_separator for jruby support.
	* lib/rubygems/path_support.rb:  ditto

Fri Nov 30 08:34:03 2012  Eric Hodel  <drbrain@segment7.net>

	* lib/rdoc/generator/darkfish.rb:  Silenced warning
	* test/rdoc/test_rdoc_rdoc.rb:  ditto

	* lib/rdoc/markup/parser.rb:  Use byteslice when available for
	  performance
	* test/rdoc/test_rdoc_markup_parser.rb:  Test for above
	* lib/rdoc/test_case.rb:  ditto

	* lib/rdoc/parser/ruby.rb:  Fixed bug parsing yield({})
	* test/rdoc/test_rdoc_parser_ruby.rb (end):

	* lib/rdoc/rubygems_hook.rb:  Skip default gems.  Display generator
	  name properly.
	* test/rdoc/test_rdoc_rubygems_hook.rb:  Test for above

	* lib/rdoc/servlet.rb:  Fixed typo.

Fri Nov 30 08:09:56 2012  Narihiro Nakamura  <authornari@gmail.com>
