@@ -1,3 +1,9 @@
+Fri Nov 30 12:27:51 2012  Eric Hodel  <drbrain@segment7.net>
+
+	* lib/rubygems/spec_fetcher.rb:  Allow prerelease spec fetching to fail
+	  for bundler.
+	* test/rubygems/test_gem_spec_fetcher.rb:  Test for above.
+
 Fri Nov 30 12:20:53 2012  Eric Hodel  <drbrain@segment7.net>
 
 	* lib/rake/backtrace.rb:  Removed duplication in
